@@ -46,11 +46,12 @@ liberator.config = { //{{{
     get visualbellWindow() { return document.getElementById(this.mainWindowID); },
     isComposeWindow: false,
 
-    autocommands: [["FolderLoaded", "Triggered after switching folders in Thunderbird"],
-                   ["PageLoadPre",  "Triggered after a page load is initiated"],
-                   ["PageLoad",     "Triggered when a page gets (re)loaded/opened"],
-                   ["Quit",         "Triggered before exiting Thunderbird"],
-                   ["Startup",      "Triggered after Thunderbird starts"]],
+    autocommands: [["FolderLoaded",  "Triggered after switching folders in Thunderbird"],
+                   ["PageLoadPre",   "Triggered after a page load is initiated"],
+                   ["PageLoad",      "Triggered when a page gets (re)loaded/opened"],
+                   ["MuttatorEnter", "Triggered after Thunderbird starts"],
+                   ["MuttatorLeave", "Triggered before exiting Thunderbird"],
+                   ["MuttatorLeavePre", "Triggered before exiting Thunderbird"]],
 
     dialogs: [
         ["about",            "About Thunderbird",
