@@ -1,10 +1,12 @@
 <pre>
 2008-XX-XX:
     * version 2.0 (probably)
+    * renamed Startup and Quit autocmd events to VimperatorEnter and
+      VimperatorLeave respectively
     * add 'helpfile' option
     * add 'wildignore' option
     * add :finish command
-    * new events BookmarkPost, ShellCmdPost, QuitPre
+    * new events BookmarkAdd, ShellCmdPost, VimperatorLeavePre
     * add 'cdpath' option
     * allow :dialog to open the cookies manager
     * add 'loadplugins' option
